--- a/src/coreBooking/Application/Application.csproj
+++ b/src/coreBooking/Application/Application.csproj
@@ -5,6 +5,7 @@
 		<Nullable>enable</Nullable>
 	</PropertyGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\Shared\Shared.csproj" />
 		<ProjectReference Include="..\Domain\Domain.csproj" />
 	</ItemGroup>
 	<ItemGroup>
