--- a/src/coreBooking/Persistence/Persistence.csproj
+++ b/src/coreBooking/Persistence/Persistence.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="NArchitecture.Core.Security" Version="1.3.3" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\..\..\Shared\Shared.csproj" />
 		<ProjectReference Include="..\Application\Application.csproj" />
 		<ProjectReference Include="..\Domain\Domain.csproj" />
 	</ItemGroup>
